vemo-app/main/default/objects/StudentProgramMonthlyStatus__c/StudentProgramMonthlyStatus__c.object-meta.xml
<CustomObject>
    <label>Student Program Monthly Status</label>
    <nameField>
        <displayFormat>SS-{0000000000}</displayFormat>
        <label>Student Program Monthly Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Program Monthly Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>