vemo-app/main/default/objects/StudentProgramMonthlyStatus__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <inlineHelpText>For this month, is the Student Program in Grace, Deferment, or Payment?</inlineHelpText>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MonthlyStatusActivity</valueSetName>
    </valueSet>
</CustomField>