vemo-app/main/default/objects/StudentProgramMonthlyStatus__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Agreement related to this Student Program Monthly Status.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>StudentProgram__c</referenceTo>
    <relationshipLabel>Monthly Status</relationshipLabel>
    <relationshipName>Student_Program_Monthly_Status</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>