vemo-app/main/default/objects/StudentProgramMonthlyStatus__c/fields/CountAsDeferment__c.field-meta.xml
<CustomField>
    <fullName>CountAsDeferment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, this month will be calculated as Deferment regardless of the Activity value</description>
    <inlineHelpText>If this field is checked, this month will be calculated as Deferment regardless of the Activity value</inlineHelpText>
    <label>Count as Deferment</label>
    <type>Checkbox</type>
</CustomField>