vemo-app/main/default/objects/StudentProgramMonthlyStatus__c/fields/CountAsGrace__c.field-meta.xml
<CustomField>
    <fullName>CountAsGrace__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, this month will be calculated as Grace regardless of the Activity value</description>
    <inlineHelpText>If this field is checked, this month will be calculated as Grace regardless of the Activity value</inlineHelpText>
    <label>Count as Grace</label>
    <type>Checkbox</type>
</CustomField>