vemo-app/main/default/objects/StudentProgramMonthlyStatus__c/fields/CountAsPaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>CountAsPaymentTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, the Payment Term for the contract will be reduced, regardless of status.</description>
    <inlineHelpText>If this field is checked, the Payment Term for the contract will be reduced, regardless of status.</inlineHelpText>
    <label>Count as Payment Term</label>
    <type>Checkbox</type>
</CustomField>