vemo-app/main/default/objects/StudentProgramMonthlyStatus__c/fields/MonthlyStatusGUID__c.field-meta.xml
<CustomField>
    <fullName>MonthlyStatusGUID__c</fullName>
    <externalId>true</externalId>
    <label>MonthlyStatusGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>