vemo-app/main/default/objects/StudentProgramMonthlyStatus__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <formula>VALUE(
TEXT(Year__c) +
(CASE( TEXT(Month__c) ,
"January", "01",
"February", "02",
"March", "03",
"April", "04",
"May", "05",
"June", "06",
"July", "07",
"August", "08",
"September", "09",
"October", "10",
"November", "11",
"December", "12",
"99")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>